# baboons-needles-in-haystacks

./: pyproject.toml
data/cluttered_mnist/: generate_data.py  input_data.py
