[tool.poetry]
name = "needles-in-haystacks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
scikit-image = "^0.19.3"
seaborn = "^0.12.2"
tensorboardX = "^2.5.1"
tensorboard = "^2.11.2"
pandas = "^1.5.3"
numpy = "^1.24.2"
tqdm = "^4.64.1"
imageio = "^2.25.0"
torchvision = "^0.14.1"
jupyter = "^1.0.0"
torch = "^1.13.1"
scipy = "^1.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
